--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,8 @@ num-format = "0.4.0"
 num-traits = "0.2.11"
 binary-heap-plus = "0.2.0"
 rayon = "1.3.0"
+rand_core = "0.5.1"
+rand_pcg = "0.2.1"
 refinery = { git = "https://github.com/jneem/refinery", branch = "master" }
 
 [features]
