--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ rand_core = "0.5.1"
 rand_pcg = "0.2.1"
 refinery = { git = "https://github.com/jneem/refinery", branch = "master" }
 assert_cmd = "0.12.0"
+libmath = "0.2.1"
 
 [features]
 default = ["GSL/v2"]
