--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ serde = { version = "^1.0.103", features = ["derive"] }
 pbr = { git = "https://github.com/a8m/pb", branch = "master" }
 flate2 = { version = "1.0.13" }
 byteorder = "1.3.2"
-serde_json = "^1.0.44"
+serde_json = {version = "^1.0.44", features = ["unbounded_depth"]}
 indicatif = "^0.13.0"
 ordered-float = "1.0.2"
 sorted-list = "0.2.0"
@@ -33,7 +33,8 @@ rand_core = "0.5.1"
 rand_pcg = "0.2.1"
 refinery = { git = "https://github.com/jneem/refinery", branch = "master" }
 assert_cmd = "0.12.0"
-
+serde-pickle = "0.6"
+serde_stacker = "0.1"
 [features]
 default = ["GSL/v2"]
 
