--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ refinery = { git = "https://github.com/jneem/refinery", branch = "master" }
 assert_cmd = "0.12.0"
 serde-pickle = "0.6"
 serde_stacker = "0.1"
+run_script = "^0.7.0"
 [features]
 default = ["GSL/v2"]
 
